docs: add readme and update video guide